--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hapi/boom": "^10.0.1",
     "@hapi/hapi": "^21.3.12",
     "@hapi/inert": "^7.1.0",
-    "@tensorflow/tfjs-node": "^4.22.0"
+    "@tensorflow/tfjs-node": "^4.22.0",
+    "uuid": "^11.0.3"
   }
 }
