--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hapi/hapi": "^21.3.12",
     "@hapi/inert": "^7.1.0",
     "@tensorflow/tfjs-node": "^4.22.0",
+    "firebase-admin": "^13.0.1",
     "uuid": "^11.0.3"
   }
 }
